New Features and Important Changes in GammaLib 1.7.2

15 October 2020


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- none

The following classes have been removed:
- none

The following classes have been renamed:
- none

The following methods have been added:
- none

The following methods have been removed:
- none

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- none

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
None


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
The copy constructors of the classes ...


9. Numerics module
------------------
None


10. Observation module
----------------------
None


11. Optimization module
-----------------------
None


12. Sky module
--------------
None


13. Support module
------------------
None


14. XML module
--------------
None


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
-----------------------
None


20. CTA interface
-----------------
None


21. COMPTEL interface 
--------------------- 
None


22. INTEGRAL/SPI interface 
-------------------------- 
None